перенос OpenAPI из контроллеров в свою папку
