# src/app/OpenApi/Schemas/NotificationBatchSchema.php
@@ -9,24 +9,7 @@ use OpenApi\Attributes as OA;
     properties: [
         new OA\Property(
             property: 'data',
-            properties: [
-                new OA\Property(
-                    property: 'id',
-                    type: 'integer',
-                    example: 1
-                ),
-                new OA\Property(
-                    property: 'status',
-                    type: 'string',
-                    example: 'accepted'
-                ),
-                new OA\Property(
-                    property: 'notifications_count',
-                    type: 'integer',
-                    example: 2
-                ),
-            ],
-            type: 'object'
+            ref: '#/components/schemas/NotificationBatchData'
         ),
     ],
     type: 'object'
