# src/app/OpenApi/Schemas/ProviderEventSchema.php
@@ -9,19 +9,7 @@ use OpenApi\Attributes as OA;
     properties: [
         new OA\Property(
             property: 'data',
-            properties: [
-                new OA\Property(
-                    property: 'id',
-                    type: 'integer',
-                    example: 1
-                ),
-                new OA\Property(
-                    property: 'status',
-                    type: 'string',
-                    example: 'delivered'
-                ),
-            ],
-            type: 'object'
+            ref: '#/components/schemas/ProviderEventData'
         ),
     ],
     type: 'object'
